[gd_scene load_steps=2 format=3 uid="uid://smmxwt5tjpmj"]

[ext_resource type="Script" path="res://menus/main_menu.gd" id="1_neyr8"]

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_neyr8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -121.0
offset_right = 285.0
offset_bottom = 121.0
grow_vertical = 2
scale = Vector2(1.61223, 1.53285)
metadata/_edit_group_ = true

[node name="newGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "new game"

[node name="resumeGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "resume game"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "options"

[node name="exitToDesktop" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "exit to desktop"

[connection signal="pressed" from="VBoxContainer/newGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/resumeGame" to="." method="_on_resume_game_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/exitToDesktop" to="." method="_on_exit_to_desktop_pressed"]
